--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,184 +28,49 @@
     <ion-card-title>Restaurants</ion-card-title>
     <ion-card-content>
       
-      <!-- Data to display after skeleton screen -->
-    <div *ngIf="data">
-      <div class="ion-padding"></div>
+      <!-- Data to display after skeleton screen AND PASTE CODE BELOW THIS-->
+    
+      <!-- <div>
+        <ion-card *ngFor = "let item of [].constructor(10)">
+          <ion-card-header>
+            <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+            <ion-card-title>Card Title</ion-card-title>
+          </ion-card-header>
+  
+          <ion-card-content>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, quidem! Non quis excepturi inventore temporibus.
+          </ion-card-content>
+        </ion-card>
+      </div> -->
 
-        <ion-list>
-    <ion-list-header>
-      <ion-label>
-        List of Available Restaurants
-      </ion-label>
-    </ion-list-header>
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="assets/images/food2.jpg">
-      </ion-thumbnail>
-      <ion-label>
-        <h3>
-          {{ data.heading }}
-        </h3>
-        <p>
-          {{ data.para1 }}
-        </p>
-        <p>
-          {{ data.para2 }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="assets/images/logo3.jpg">
-      </ion-thumbnail>
-      <ion-label>
-        <h3>
-          {{ data.heading }}
-        </h3>
-        <p>
-          {{ data.para1 }}
-        </p>
-        <p>
-          {{ data.para2 }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="assets/images/food1.png">
-      </ion-thumbnail>
-      <ion-label>
-        <h3>
-          {{ data.heading }}
-        </h3>
-        <p>
-          {{ data.para1 }}
-        </p>
-        <p>
-          {{ data.para2 }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="assets/images/food1.png">
-      </ion-thumbnail>
-      <ion-label>
-        <h3>
-          {{ data.heading }}
-        </h3>
-        <p>
-          {{ data.para1 }}
-        </p>
-        <p>
-          {{ data.para2 }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="assets/images/food1.png">
-      </ion-thumbnail>
-      <ion-label>
-        <h3>
-          {{ data.heading }}
-        </h3>
-        <p>
-          {{ data.para1 }}
-        </p>
-        <p>
-          {{ data.para2 }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="assets/images/food1.png">
-      </ion-thumbnail>
-      <ion-label>
-        <h3>
-          {{ data.heading }}
-        </h3>
-        <p>
-          {{ data.para1 }}
-        </p>
-        <p>
-          {{ data.para2 }}
-        </p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
-</div>
+      <div>
+        <ion-card *ngFor = "let item of [].constructor(20)">
+          <ion-card-header>
+            <ion-card-subtitle>
+              <ion-skeleton-text animated style="width: 30%">
+                
+              </ion-skeleton-text>
+            </ion-card-subtitle>
 
-<!-- Skeleton screen -->
-<div *ngIf="!data">
-  <div class="ion-padding custom-skeleton">
-    <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
-    <ion-skeleton-text animated></ion-skeleton-text>
-    <ion-skeleton-text animated style="width: 88%"></ion-skeleton-text>
-    <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
-    <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
-  </div>
+            <ion-card-title>
+              <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+            </ion-card-title>
+          </ion-card-header>
+  
+          <ion-card-content>
+            <ion-skeleton-text></ion-skeleton-text>
+            <ion-skeleton-text></ion-skeleton-text>
+            <ion-skeleton-text></ion-skeleton-text>
+            <ion-skeleton-text></ion-skeleton-text>
+            <ion-skeleton-text></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+          </ion-card-content>
+        </ion-card>
+      </div>
 
-  <ion-list>
-    <ion-list-header>
-      <ion-label>
-        <ion-skeleton-text animated style="width: 20%"></ion-skeleton-text>
-      </ion-label>
-    </ion-list-header>
-    <ion-item>
-      <ion-avatar slot="start">
-        <ion-skeleton-text animated></ion-skeleton-text>
-      </ion-avatar>
-      <ion-label>
-        <h3>
-          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
-        </h3>
-        <p>
-          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
-        </p>
-        <p>
-          <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <ion-skeleton-text animated></ion-skeleton-text>
-      </ion-thumbnail>
-      <ion-label>
-        <h3>
-          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
-        </h3>
-        <p>
-          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
-        </p>
-        <p>
-          <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-skeleton-text animated style="width: 27px; height: 27px" slot="start"></ion-skeleton-text>
-      <ion-label>
-        <h3>
-          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
-        </h3>
-        <p>
-          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
-        </p>
-        <p>
-          <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
-        </p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
-</div>
     </ion-card-content>
   </ion-card>
 
     <!-- Data to display after skeleton screen -->
-
-
 
  </ion-content>
