--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content class = "card-background-page">
   
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
@@ -30,7 +30,7 @@
       
       <!-- Data to display after skeleton screen AND PASTE CODE BELOW THIS-->
     
-      <!-- <div>
+      <!-- THIS IS FOR THE SKELETON TEXT WORKING <div>
         <ion-card *ngFor = "let item of [].constructor(10)">
           <ion-card-header>
             <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
@@ -43,7 +43,10 @@
         </ion-card>
       </div> -->
 
-      <div>
+      <!-- <div>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
         <ion-card *ngFor = "let item of [].constructor(20)">
           <ion-card-header>
             <ion-card-subtitle>
@@ -66,7 +69,198 @@
             <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
           </ion-card-content>
         </ion-card>
-      </div>
+        </ion-col>
+      </ion-row>
+      </ion-grid>
+      </div> -->
+
+      <ion-grid fixed>
+        <ion-row> <!--This is just one row with mulitiple columns-->
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/logo2.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card>
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()" >
+              <ion-img class = "back-image" src="/assets/images/logo.png"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+       
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/food1.png"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card>
+           
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img src="/assets/images/food2.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+
+        </ion-row>
+
+        <ion-row> <!--This is just one row with mulitiple columns-->
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img src="/assets/images/food3.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card>
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/food4.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+       
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/food5.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card>
+           
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/food6.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+
+        </ion-row>
+
+        <ion-row> <!--This is just one row with mulitiple columns-->
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/kota.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card>
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/kota1.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+       
+       
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/kota2.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card>
+           
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/kota3.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+
+        </ion-row>
+
+        <ion-row> <!--This is just one row with mulitiple columns-->
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img class = "back-image" src="/assets/images/kota4.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card>
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img src="/assets/images/kota5.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+       
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img src="/assets/images/logo2.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+              
+            </ion-card >
+           
+          </ion-col>
+
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+            <ion-card (click)="gotoMenu()">
+              <ion-img src="/assets/images/food6.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Mamas Kitchen</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+
+        </ion-row>
+
+      </ion-grid>
 
     </ion-card-content>
   </ion-card>
