--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -77,7 +77,7 @@
       <ion-grid fixed>
         <ion-row> <!--This is just one row with mulitiple columns-->
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/logo2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -88,7 +88,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()" >
+            <ion-card (click)="gotoVendorMenu2()" >
               <ion-img class = "back-image" src="/assets/images/logo.png"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -98,7 +98,7 @@
           </ion-col>
        
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoVendorMenu3()">
               <ion-img class = "back-image" src="/assets/images/food1.png"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
