--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -112,7 +112,7 @@
       <ion-grid>
         <ion-row>
           <ion-col size="9">
-            Total [routerLink]="['/routePath']" routerLinkActive="router-link-active" :
+            Total R:
           </ion-col>
           <ion-col size="3" class="ion-text-end">
           <ion-label color="secondary">
