--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -33,56 +33,194 @@
         <ion-icon name="call"></ion-icon>
       </ion-segment-button>
     </ion-segment> -->
-     <ion-list>
-       <ion-row>
-        <ion-img class="logo" src="assets/images/logo2.png" alt=""></ion-img>
-       </ion-row>
-     <ion-card *ngFor="let p of menuList" (click)="exProduct(p)" (click)="openExtras()">
-      <ion-card-header>
-        <ion-card-title>{{ p.item_name}}</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-row class="ion-align-items-center">
-          <ion-col size="8">
-            <ion-label color="secondary">
-              <b>{{p.item_price | currency:'R'}}</b>
-            </ion-label>
-          </ion-col>
-          
-        </ion-row>
-      </ion-card-content>
-    </ion-card>
-    
-    
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <ion-img class="" src="assets/images/kota2.jpg" alt=""></ion-img>
+    <ion-grid fixed>
+      <ion-row> <!--This is just one row with mulitiple columns-->
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/logo2.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card>
         </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/logo.png"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+     
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/food1.png"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card>
+         
+        </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img src="/assets/images/food2.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+  
       </ion-row>
+  
+      <ion-row> <!--This is just one row with mulitiple columns-->
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img src="/assets/images/food3.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card>
+        </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/food4.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+     
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/food5.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card>
+         
+        </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/food6.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+  
+      </ion-row>
+  
+      <ion-row> <!--This is just one row with mulitiple columns-->
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/kota.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card>
+        </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/kota1.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+     
+     
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/kota2.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card>
+         
+        </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/kota3.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+  
+      </ion-row>
+  
+      <ion-row> <!--This is just one row with mulitiple columns-->
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img class = "back-image" src="/assets/images/kota4.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card>
+        </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img src="/assets/images/kota5.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+     
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img src="/assets/images/logo2.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+            
+          </ion-card >
+         
+        </ion-col>
+  
+        <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
+          <ion-card>
+            <ion-img src="/assets/images/food6.jpg"></ion-img>
+            <ion-card-content>
+              <ion-card-title>Mamas Kitchen</ion-card-title>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elitme. Ab aspernatur, id suscipit dolorem tenetur possimus.</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+  
+      </ion-row>
+  
     </ion-grid>
-  </ion-list>
-      <ion-card>
-        <!--this is the slides you will see on the home page-->
-        <ion-slides pager  >
-
-          <ion-slide >
-            <ion-img class="" src="assets/images/kota1.jpg" alt=""></ion-img>
-            <h2>Slide 1</h2>
-          </ion-slide>
-        
-          <ion-slide >
-            <ion-img class="" src="assets/images/kota2.jpg" alt=""></ion-img>
-            <h3>Slide 2</h3>
-          </ion-slide>
-        
-          <ion-slide >
-            <ion-img class="" src="assets/images/food5.jpg" alt=""></ion-img>
-            <h4>Slide 3</h4>
-          </ion-slide>    
-        </ion-slides>
-
-      </ion-card>
+  
   </ion-content>
 
   
